# chess-move-reaction-ai

./: .gitignore  README.md  docker-compose.ghcr.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README_backend.md  app.py  cli.py  engine.py  explain.py  features.py  pyproject.toml  requirements.txt  schemas.py  settings.py
backend/explain/: __init__.py  core.py  engine_summary.py  reason_builder.py  templates.py  utils.py
backend/ml/: __init__.py  feature_engineering.py  predictor.py
backend/tests/: test_edge_cases.py  test_engine.py  test_explain.py  test_features.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  main.tsx
